--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "weatherapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://kavinsan.github.io/Portfolio-Webpage",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -22,6 +25,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +49,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
+    "gh-pages": "^3.1.0",
     "jest-enzyme": "^7.1.2",
     "react-test-renderer": "^16.13.1"
   }
