--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weatherapp",
+  "name": "profolio",
   "version": "0.1.0",
   "private": true,
   "homepage": "http://kavinsan.github.io/Portfolio-Webpage",
